feat: 学校列表管理
